--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rc": "1.0.1",
     "sails": "~0.12.14",
     "sails-disk": "~0.10.9",
+    "sails-postgresql": "^0.11.4",
     "ts-node": "^4.1.0",
     "typescript": "^2.7.1",
     "web3": "^1.0.0-beta.29"
