--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
+    "sailsb":
+      "ionic-app-scripts build --wwwDir ../sailsgame/assets  --wwwDir ../sailsgame/assets/build --prod",
+    "sails":
+      "ionic-app-scripts serve --wwwDir ../sailsgame/assets  --buildDir ../sailsgame/assets/build",
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
@@ -23,6 +27,7 @@
     "@ionic-native/core": "4.4.0",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
+    "@ionic/app-scripts": "3.1.8",
     "@ionic/storage": "2.1.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
@@ -34,5 +39,11 @@
     "@ionic/app-scripts": "3.1.8",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "proxies": [
+    {
+      "path": "/api",
+      "proxyUrl": "https://eth.bid/api"
+    }
+  ]
 }
