--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "build": "ionic-app-scripts build",
     "lint": "ionic-app-scripts lint",
     "ionic:build": "ionic-app-scripts build",
-    "sailsb":
-      "ionic-app-scripts build --wwwDir ../sailsgame/assets  --wwwDir ../sailsgame/assets/build --prod",
-    "sails":
-      "ionic-app-scripts serve --wwwDir ../sailsgame/assets  --buildDir ../sailsgame/assets/build",
+    "sailsb": "ionic-app-scripts build --wwwDir ../sailsgame/assets  --wwwDir ../sailsgame/assets/build --prod",
+    "sails": "ionic-app-scripts serve --wwwDir ../sailsgame/assets  --buildDir ../sailsgame/assets/build",
     "ionic:serve": "ionic-app-scripts serve"
   },
   "dependencies": {
@@ -31,6 +29,7 @@
     "@ionic/storage": "2.1.3",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "ngx-pagination": "^3.1.0",
     "rxjs": "5.5.2",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.18"
