--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "sails-postgresql": "^0.11.4",
     "ts-node": "^4.1.0",
     "typescript": "^2.7.1",
-    "web3": "^1.0.0-beta.30"
+    "web3": "1.0.0-beta.30"
   },
   "scripts": {
     "debug": "node debug app.js",
